syntax = "proto2";
package douyin.core.favoritelist;
option go_package = "../pb";

message douyin_favorite_action_request {
  required int64 user_id = 1; //用户id
  required string token = 2;  //用户鉴权token
  required int64 video_id = 3;  //视频id
  required int32 action_type = 4; //1-点赞，2-取消点赞
}

message douyin_favorite_action_response{
  required int32 status_code = 1;   //状态码，0-成功，其他值-失败
  optional string status_msg = 2;   //返回状态描述
}

service FavoriteAction{
  rpc GetFavoriteAction(douyin_favorite_action_request) returns (douyin_favorite_action_response){}
}